fixed training layer. functions for analysis

--- a/train_SAE.ipynb
+++ b/train_SAE.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "c3329190",
    "metadata": {},
    "outputs": [],
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "1b257881",
    "metadata": {},
    "outputs": [],
@@ -30,7 +30,35 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "5f78d556",
+   "id": "4c3fb691",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "device = \"cuda:0\"\n",
+    "model_name = \"/gpfs/space/projects/stacc_health/gpt2_model/estMed-gpt2_fine_tuned4/estMed-gpt2_fine_tuned4\" \n",
+    "\n",
+    "model = LanguageModel(\n",
+    "    model_name,\n",
+    "    device_map=device,\n",
+    ")\n",
+    "submodule = model.transformer.h[11].mlp\n",
+    "activation_dim = model.transformer.h[0].ln_1.normalized_shape[0] # output dimension of the MLP = 768\n",
+    "dictionary_size = 16 * activation_dim\n",
+    "\n",
+    "buffer = ActivationBuffer( # buffer will yield batches of tensors of dimension = submodule's output dimension\n",
+    "    data=data,\n",
+    "    model=model,\n",
+    "    submodule=submodule,\n",
+    "    d_submodule=activation_dim, # output dimension of the model component\n",
+    "    n_ctxs=3e4,  # length of each context. you can set this higher or lower dependong on your available memory\n",
+    "    device=device,\n",
+    ")  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "f4830cbe",
    "metadata": {},
    "outputs": [
     {
@@ -66,41 +94,13 @@
        ")"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "model"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "4c3fb691",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "device = \"cuda:0\"\n",
-    "model_name = \"/gpfs/space/projects/stacc_health/gpt2_model/estMed-gpt2_fine_tuned4/estMed-gpt2_fine_tuned4\" \n",
-    "\n",
-    "model = LanguageModel(\n",
-    "    model_name,\n",
-    "    device_map=device,\n",
-    ")\n",
-    "submodule = model.transformer.h[11] # model.gpt_neox.layers[1].mlp # layer 1 MLP Hilisemat.\n",
-    "activation_dim = model.transformer.h[0].ln_1.normalized_shape[0] # output dimension of the MLP = 768\n",
-    "dictionary_size = 16 * activation_dim\n",
-    "\n",
-    "buffer = ActivationBuffer( # buffer will yield batches of tensors of dimension = submodule's output dimension\n",
-    "    data=data,\n",
-    "    model=model,\n",
-    "    submodule=submodule,\n",
-    "    d_submodule=activation_dim, # output dimension of the model component\n",
-    "    n_ctxs=3e4,  # length of each context. you can set this higher or lower dependong on your available memory\n",
-    "    device=device,\n",
-    ")  "
    ]
   },
   {
@@ -117,7 +117,7 @@
     "#log_steps = 100  # Log the training on wandb or print to console every log_steps\n",
     "\n",
     "save_checkpoints = True\n",
-    "save_dir = \"./saes\""
+    "save_dir = \"./saes/estMedSae070425\""
    ]
   },
   {
@@ -174,18 +174,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "4e840bbb",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#for i in range(5):\n",
-    "#    print(next(data))\n",
-    "#    print(\"\")"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 8,
    "id": "9a960331",
    "metadata": {},
@@ -217,10 +205,11 @@
     "ae = trainSAE(\n",
     "    data=buffer,  # you could also use another (i.e. pytorch dataloader) here instead of buffer\n",
     "    trainer_configs=[trainer_cfg],\n",
-    "    #save_steps=save_steps,\n",
+    "    save_steps=save_steps,\n",
     "    save_dir=save_dir,\n",
     "    #log_steps=log_steps,\n",
     "    steps=steps,\n",
+    "    autocast_dtype=t.bfloat16, # new\n",
     ")\n"
    ]
   },
