--- a/train_SAE_test.ipynb
+++ b/train_SAE_test.ipynb
@@ -89,6 +89,104 @@
     "    steps=steps,\n",
     ")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "26433100",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from dictionary_learning import AutoEncoder\n",
+    "import torch"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "1789a722",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# load autoencoder\n",
+    "#ae = AutoEncoder.from_pretrained(\"/gpfs/helios/home/jpauklin/dictionary_learning/saes/trainer_0/ae.pt\") # to is rquired to load to GPU\n",
+    "\n",
+    "\n",
+    "ae = AutoEncoder.from_pretrained(\"/gpfs/helios/home/jpauklin/dictionary_learning/dictionaries/pythia-70m-deduped/mlp_out_layer5/10_32768/ae.pt\")\n",
+    "\n",
+    "\n",
+    "# get NN activations using your preferred method: hooks, transformer_lens, nnsight, etc. ...\n",
+    "# for now we'll just use random activations\n",
+    "activations = torch.randn(64, 512) # 768 estMed\n",
+    "features = ae.encode(activations) # get features from activations\n",
+    "reconstructed_activations = ae.decode(features)\n",
+    "\n",
+    "# you can also just get the reconstruction ...\n",
+    "reconstructed_activations = ae(activations)\n",
+    "# ... or get the features and reconstruction at the same time\n",
+    "reconstructed_activations, features = ae(activations, output_features=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "7764b30d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[ 1.6472,  1.5410, -0.9106,  ..., -1.5017,  1.5074,  0.3728],\n",
+       "        [ 0.1759, -0.9854, -1.1953,  ..., -0.3835,  0.5757, -0.0051],\n",
+       "        [-2.6950,  0.8102,  0.6362,  ...,  0.3335,  0.2446,  1.2338],\n",
+       "        ...,\n",
+       "        [-1.5096,  1.6440,  1.2469,  ...,  0.1677, -0.6865, -0.1040],\n",
+       "        [-0.0327,  0.3279, -0.9597,  ...,  0.9221,  1.0353,  0.3163],\n",
+       "        [ 0.9611, -0.2309,  0.9678,  ..., -0.1980,  0.9035, -1.1735]])"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "activations"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "9ed8108a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[-2.8360e+00, -9.3310e+00, -1.3342e+01,  ..., -1.0414e+01,\n",
+       "          1.0899e+01, -4.4748e+00],\n",
+       "        [-1.3727e+01, -9.9600e+00, -1.5925e+01,  ..., -9.7325e+00,\n",
+       "          4.5918e+00, -6.0350e+00],\n",
+       "        [-1.6353e+01, -6.7410e+00, -4.2032e+00,  ..., -2.3968e-01,\n",
+       "          1.3756e+00,  1.1615e+00],\n",
+       "        ...,\n",
+       "        [-1.6605e+00,  2.3595e-01,  2.0186e-03,  ..., -1.1771e+00,\n",
+       "         -4.9485e-01, -3.6054e-01],\n",
+       "        [-5.3005e+00, -4.4510e+00, -5.8403e+00,  ..., -1.6042e+00,\n",
+       "          5.6609e+00, -1.0288e+00],\n",
+       "        [-3.3809e+00, -5.3261e-01,  4.4034e-01,  ..., -3.2447e+00,\n",
+       "          3.1148e+00, -2.6056e+00]], grad_fn=<AddBackward0>)"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "reconstructed_activations"
+   ]
   }
  ],
  "metadata": {
