--- a/train_SAE.ipynb
+++ b/train_SAE.ipynb
@@ -3,6 +3,16 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "9f23632d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# How to limit number of features learnt?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "id": "c3329190",
    "metadata": {},
    "outputs": [],
@@ -18,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "1b257881",
    "metadata": {},
    "outputs": [],
@@ -29,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "4c3fb691",
    "metadata": {},
    "outputs": [],
@@ -57,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "f4830cbe",
    "metadata": {},
    "outputs": [
@@ -94,7 +104,7 @@
        ")"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -105,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "4c9aad53",
    "metadata": {},
    "outputs": [],
@@ -117,12 +127,12 @@
     "#log_steps = 100  # Log the training on wandb or print to console every log_steps\n",
     "\n",
     "save_checkpoints = True\n",
-    "save_dir = \"./saes/estMedSae070425\""
+    "save_dir = \"./saes/estMedSae120425\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "24e56439",
    "metadata": {},
    "outputs": [],
@@ -144,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "469122aa",
    "metadata": {},
    "outputs": [
@@ -174,16 +184,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "9a960331",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "12042025\n"
+     ]
+    },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
       "  0%|          | 0/24414 [00:00<?, ?it/s]You're using a GPT2TokenizerFast tokenizer. Please note that with a fast tokenizer, using the `__call__` method is faster than using a method to encode the text followed by a call to the `pad` method to get a padded encoding.\n",
-      "100%|██████████| 24414/24414 [51:57<00:00,  7.83it/s]  \n"
+      "100%|██████████| 24414/24414 [41:19<00:00,  9.85it/s] \n"
      ]
     }
    ],
@@ -215,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "2a2ac48e",
    "metadata": {
     "scrolled": true
@@ -227,7 +244,7 @@
        "' from dictionary_learning_demo/demo.py\\n        trainSAE(\\n            data=activation_buffer,\\n            trainer_configs=trainer_configs,\\n            use_wandb=use_wandb,\\n            steps=steps,\\n            save_steps=save_steps,\\n            save_dir=save_dir,\\n            log_steps=log_steps,\\n            wandb_project=demo_config.wandb_project,\\n            normalize_activations=True,\\n            verbose=False,\\n            autocast_dtype=t.bfloat16,\\n        )\\n'"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
