updated functions for csr

--- a/train_SAE.ipynb
+++ b/train_SAE.ipynb
@@ -2,17 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "9f23632d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# How to limit number of features learnt?"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "c3329190",
    "metadata": {},
    "outputs": [],
@@ -28,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "1b257881",
    "metadata": {},
    "outputs": [],
@@ -39,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "4c3fb691",
    "metadata": {},
    "outputs": [],
@@ -53,7 +43,7 @@
     ")\n",
     "submodule = model.transformer.h[11].mlp\n",
     "activation_dim = model.transformer.h[0].ln_1.normalized_shape[0] # output dimension of the MLP = 768\n",
-    "dictionary_size = 16 * activation_dim\n",
+    "dictionary_size = 8 * activation_dim\n",
     "\n",
     "buffer = ActivationBuffer( # buffer will yield batches of tensors of dimension = submodule's output dimension\n",
     "    data=data,\n",
@@ -67,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "f4830cbe",
    "metadata": {},
    "outputs": [
@@ -104,7 +94,7 @@
        ")"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -115,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "4c9aad53",
    "metadata": {},
    "outputs": [],
@@ -124,15 +114,15 @@
     "num_tokens = 50_000_000 # numbrid pärit dictionary_learning_demo/demo_config.py-st\n",
     "sae_batch_size = 2048\n",
     "steps = int(num_tokens / sae_batch_size) # Total number of batches to train\n",
-    "#log_steps = 100  # Log the training on wandb or print to console every log_steps\n",
+    "log_steps = 100  # Log the training on wandb or print to console every log_steps\n",
     "\n",
     "save_checkpoints = True\n",
-    "save_dir = \"./saes/estMedSae120425\""
+    "save_dir = \"./saes/estMedSae170425\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "24e56439",
    "metadata": {},
    "outputs": [],
@@ -224,9 +214,11 @@
     "    trainer_configs=[trainer_cfg],\n",
     "    save_steps=save_steps,\n",
     "    save_dir=save_dir,\n",
-    "    #log_steps=log_steps,\n",
+    "    log_steps=log_steps,\n",
     "    steps=steps,\n",
     "    autocast_dtype=t.bfloat16, # new\n",
+    "    normalize_activations=True,\n",
+    "    resample_steps\n",
     ")\n"
    ]
   },
