Pushing to remote

--- a/train_SAE.ipynb
+++ b/train_SAE.ipynb
@@ -43,7 +43,7 @@
     ")\n",
     "submodule = model.transformer.h[11].mlp\n",
     "activation_dim = model.transformer.h[0].ln_1.normalized_shape[0] # output dimension of the MLP = 768\n",
-    "dictionary_size = 8 * activation_dim\n",
+    "dictionary_size = 16 * activation_dim # 12_288 features\n",
     "\n",
     "buffer = ActivationBuffer( # buffer will yield batches of tensors of dimension = submodule's output dimension\n",
     "    data=data,\n",
