--- a/train_SAE.ipynb
+++ b/train_SAE.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "c3329190",
    "metadata": {},
    "outputs": [],
@@ -11,14 +11,38 @@
     "import torch as t\n",
     "from nnsight import LanguageModel\n",
     "from dictionary_learning import ActivationBuffer, AutoEncoder\n",
-    "from dictionary_learning.trainers import StandardTrainer\n",
+    "from dictionary_learning.trainers import StandardTrainer, StandardTrainerAprilUpdate\n",
     "from dictionary_learning.training import trainSAE\n",
-    "from dictionary_learning.utils import read_csv"
+    "from dictionary_learning.utils import read_csv\n",
+    "import gc"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
+   "id": "86b65a6d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# empty cache to free memory before any further action.\n",
+    "t.cuda.empty_cache() \n",
+    "gc.collect()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "id": "1b257881",
    "metadata": {},
    "outputs": [],
@@ -29,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "id": "4c3fb691",
    "metadata": {},
    "outputs": [],
@@ -37,11 +61,13 @@
     "device = \"cuda:0\"\n",
     "model_name = \"/gpfs/space/projects/stacc_health/gpt2_model/estMed-gpt2_fine_tuned4/estMed-gpt2_fine_tuned4\" \n",
     "\n",
+    "# Lisada loss visualiseerimine\n",
+    "\n",
     "model = LanguageModel(\n",
     "    model_name,\n",
     "    device_map=device,\n",
     ")\n",
-    "submodule = model.transformer.h[11].mlp\n",
+    "submodule = model.transformer.h[5].mlp # Take the output of the model's 12th mlp block.\n",
     "activation_dim = model.transformer.h[0].ln_1.normalized_shape[0] # output dimension of the MLP = 768\n",
     "dictionary_size = 16 * activation_dim # 12_288 features\n",
     "\n",
@@ -57,78 +83,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "f4830cbe",
+   "execution_count": 12,
+   "id": "93f69176",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "GPT2LMHeadModel(\n",
-       "  (transformer): GPT2Model(\n",
-       "    (wte): Embedding(50258, 768)\n",
-       "    (wpe): Embedding(1024, 768)\n",
-       "    (drop): Dropout(p=0.1, inplace=False)\n",
-       "    (h): ModuleList(\n",
-       "      (0-11): 12 x GPT2Block(\n",
-       "        (ln_1): LayerNorm((768,), eps=1e-05, elementwise_affine=True)\n",
-       "        (attn): GPT2Attention(\n",
-       "          (c_attn): Conv1D()\n",
-       "          (c_proj): Conv1D()\n",
-       "          (attn_dropout): Dropout(p=0.1, inplace=False)\n",
-       "          (resid_dropout): Dropout(p=0.1, inplace=False)\n",
-       "        )\n",
-       "        (ln_2): LayerNorm((768,), eps=1e-05, elementwise_affine=True)\n",
-       "        (mlp): GPT2MLP(\n",
-       "          (c_fc): Conv1D()\n",
-       "          (c_proj): Conv1D()\n",
-       "          (act): NewGELUActivation()\n",
-       "          (dropout): Dropout(p=0.1, inplace=False)\n",
-       "        )\n",
-       "      )\n",
-       "    )\n",
-       "    (ln_f): LayerNorm((768,), eps=1e-05, elementwise_affine=True)\n",
-       "  )\n",
-       "  (lm_head): Linear(in_features=768, out_features=50258, bias=False)\n",
-       "  (generator): WrapperModule()\n",
-       ")"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter SAE saving folder (estMedSae<date>): estMedSaeX16layer5\n"
+     ]
     }
    ],
    "source": [
-    "model"
+    "saeSaveName = input(\"Enter SAE saving folder (estMedSae<date>): \")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "id": "4c9aad53",
    "metadata": {},
    "outputs": [],
    "source": [
     "# CONFIG\n",
     "num_tokens = 50_000_000 # numbrid pärit dictionary_learning_demo/demo_config.py-st\n",
-    "sae_batch_size = 2048\n",
+    "sae_batch_size = 3072\n",
     "steps = int(num_tokens / sae_batch_size) # Total number of batches to train\n",
-    "log_steps = 100  # Log the training on wandb or print to console every log_steps\n",
+    "log_steps = 1000  # Log the training on wandb or print to console every log_steps\n",
     "\n",
     "save_checkpoints = True\n",
-    "save_dir = \"./saes/estMedSae170425\""
+    "save_dir = \"./saes/\" + saeSaveName\n",
+    "trainer_class = StandardTrainer"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "id": "24e56439",
    "metadata": {},
    "outputs": [],
    "source": [
     "trainer_cfg = {\n",
-    "    \"trainer\": StandardTrainer,\n",
+    "    \"trainer\": trainer_class,\n",
     "    \"dict_class\": AutoEncoder,\n",
     "    \"activation_dim\": activation_dim,\n",
     "    \"dict_size\": dictionary_size,\n",
@@ -137,14 +134,14 @@
     "    \n",
     "    \"steps\" : steps,\n",
     "    \"lm_name\" : model_name,\n",
-    "    \"layer\" : 11,\n",
+    "    \"layer\" : 5,\n",
     "    \n",
     "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "id": "469122aa",
    "metadata": {},
    "outputs": [
@@ -153,7 +150,7 @@
      "output_type": "stream",
      "text": [
       "desired_checkpoints: [0.0, 0.0010000000474974513, 0.003162277629598975, 0.009999999776482582, 0.03162277489900589, 0.10000000149011612, 0.3162277638912201]\n",
-      "save_steps: [0, 24, 77, 244, 772, 2441, 7720]\n"
+      "save_steps: [0, 16, 51, 162, 514, 1627, 5146]\n"
      ]
     }
    ],
@@ -174,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "id": "9a960331",
    "metadata": {},
    "outputs": [
@@ -182,35 +179,40 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "12042025\n"
+      "1105\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  0%|          | 0/24414 [00:00<?, ?it/s]You're using a GPT2TokenizerFast tokenizer. Please note that with a fast tokenizer, using the `__call__` method is faster than using a method to encode the text followed by a call to the `pad` method to get a padded encoding.\n",
-      "100%|██████████| 24414/24414 [41:19<00:00,  9.85it/s] \n"
+      "Calculating norm factor:   0%|          | 0/100 [00:00<?, ?it/s]You're using a GPT2TokenizerFast tokenizer. Please note that with a fast tokenizer, using the `__call__` method is faster than using a method to encode the text followed by a call to the `pad` method to get a padded encoding.\n",
+      "Calculating norm factor: 101it [01:21,  1.24it/s]                         \n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Average mean squared norm: 29.92813491821289\n",
+      "Norm factor: 5.470661163330078\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 16276/16276 [25:53<00:00, 10.48it/s]\n"
      ]
     }
    ],
    "source": [
     "if (\"trainer\" not in trainer_cfg): # trainer field gets deleted during trainSAE\n",
-    "    trainer_cfg = {\n",
-    "    \"trainer\": StandardTrainer,\n",
-    "    \"dict_class\": AutoEncoder,\n",
-    "    \"activation_dim\": activation_dim,\n",
-    "    \"dict_size\": dictionary_size,\n",
-    "    \"lr\": 1e-3,\n",
-    "    \"device\": device,\n",
-    "    \n",
-    "    \"steps\" : int(num_tokens / sae_batch_size), # Total number of batches to train\n",
-    "    \"lm_name\" : model_name,\n",
-    "    }\n",
-    "    \n",
+    "    trainer_cfg[\"trainer\"] = trainer_class\n",
+    "\n",
     "# train the sparse autoencoder (SAE)\n",
     "ae = trainSAE(\n",
-    "    data=buffer,  # you could also use another (i.e. pytorch dataloader) here instead of buffer\n",
+    "    data=buffer,\n",
     "    trainer_configs=[trainer_cfg],\n",
     "    save_steps=save_steps,\n",
     "    save_dir=save_dir,\n",
@@ -218,29 +220,17 @@
     "    steps=steps,\n",
     "    autocast_dtype=t.bfloat16, # new\n",
     "    normalize_activations=True,\n",
-    "    resample_steps\n",
     ")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "2a2ac48e",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "' from dictionary_learning_demo/demo.py\\n        trainSAE(\\n            data=activation_buffer,\\n            trainer_configs=trainer_configs,\\n            use_wandb=use_wandb,\\n            steps=steps,\\n            save_steps=save_steps,\\n            save_dir=save_dir,\\n            log_steps=log_steps,\\n            wandb_project=demo_config.wandb_project,\\n            normalize_activations=True,\\n            verbose=False,\\n            autocast_dtype=t.bfloat16,\\n        )\\n'"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "\"\"\" from dictionary_learning_demo/demo.py\n",
