updated analysing for large datasets

--- a/eval_SAE.ipynb
+++ b/eval_SAE.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "id": "f914de85",
    "metadata": {},
    "outputs": [
@@ -34,14 +34,14 @@
     }
    ],
    "source": [
-    "ae = AutoEncoder.from_pretrained(\"/gpfs/helios/home/jpauklin/dictionary_learning/saes/estMedSae120425/trainer_0/ae_12042025.pt\").to(\"cuda\") # to is rquired to load to GPU\n",
+    "ae = AutoEncoder.from_pretrained(\"/gpfs/helios/home/jpauklin/dictionary_learning/saes/estMedSaeX16/trainer_0/ae_1105.pt\").to(\"cuda\") # to is rquired to load to GPU\n",
     "\n",
     "data = read_csv(\"/gpfs/space/projects/stacc_health/data-synthetic/100k_synthetic_texts.csv\", 100_000)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "id": "ba905ef2",
    "metadata": {},
    "outputs": [],
@@ -70,10 +70,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 4,
    "id": "61bfafad",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "You're using a GPT2TokenizerFast tokenizer. Please note that with a fast tokenizer, using the `__call__` method is faster than using a method to encode the text followed by a call to the `pad` method to get a padded encoding.\n"
+     ]
+    }
+   ],
    "source": [
     "out = evaluate(dictionary = ae, \n",
     "               activations = buffer,\n",
@@ -101,28 +109,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 5,
    "id": "b2572080",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'l2_loss': 1.833837628364563,\n",
-       " 'l1_loss': 101.27059173583984,\n",
-       " 'l0': 1205.56884765625,\n",
-       " 'frac_variance_explained': 0.9800195693969727,\n",
-       " 'cossim': 0.9891963601112366,\n",
-       " 'l2_ratio': 0.9396045207977295,\n",
-       " 'relative_reconstruction_bias': 0.9661658406257629,\n",
+       "{'l2_loss': 5.859640121459961,\n",
+       " 'l1_loss': 20.421188354492188,\n",
+       " 'l0': 45.0107421875,\n",
+       " 'frac_variance_explained': 0.7675023078918457,\n",
+       " 'cossim': 0.8705556392669678,\n",
+       " 'l2_ratio': 0.7453358173370361,\n",
+       " 'relative_reconstruction_bias': 0.8966822624206543,\n",
        " 'loss_original': 4.567016124725342,\n",
-       " 'loss_reconstructed': 4.566261291503906,\n",
+       " 'loss_reconstructed': 4.580355644226074,\n",
        " 'loss_zero': 4.4883832931518555,\n",
-       " 'frac_recovered': 0.9904005527496338,\n",
-       " 'frac_alive': 0.9456380605697632}"
+       " 'frac_recovered': 1.1696431636810303,\n",
+       " 'frac_alive': 0.6669108271598816}"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
