refactoring and cleaning up old code

--- a/eval_SAE.ipynb
+++ b/eval_SAE.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "id": "639db6aa",
    "metadata": {},
    "outputs": [],
@@ -15,12 +15,36 @@
     "from dictionary_learning import ActivationBuffer, AutoEncoder\n",
     "from dictionary_learning.trainers import StandardTrainer\n",
     "from dictionary_learning.training import trainSAE\n",
-    "from dictionary_learning.utils import read_csv"
+    "from dictionary_learning.utils import read_csv\n",
+    "import gc"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
+   "id": "c8287e47",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# empty cache to free memory before any further action.\n",
+    "t.cuda.empty_cache() \n",
+    "gc.collect()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "id": "f914de85",
    "metadata": {},
    "outputs": [
@@ -34,14 +58,14 @@
     }
    ],
    "source": [
-    "ae = AutoEncoder.from_pretrained(\"/gpfs/helios/home/jpauklin/dictionary_learning/saes/estMedSaeX16/trainer_0/ae_1105.pt\").to(\"cuda\") # to is rquired to load to GPU\n",
-    "\n",
-    "data = read_csv(\"/gpfs/space/projects/stacc_health/data-synthetic/100k_synthetic_texts.csv\", 100_000)"
+    "ae_X16L11 = AutoEncoder.from_pretrained(\"/gpfs/helios/home/jpauklin/dictionary_learning/saes/estMedSaeX16/trainer_0/ae_1105.pt\").to(\"cuda\") # to is rquired to load to GPU\n",
+    "ae_X16L5 = AutoEncoder.from_pretrained(\"/gpfs/helios/home/jpauklin/dictionary_learning/saes/estMedSaeX16layer5/trainer_0/ae_1105.pt\").to(\"cuda\") # to is rquired to load to GPU\n",
+    "ae_X64_11 = AutoEncoder.from_pretrained(\"/gpfs/helios/home/jpauklin/dictionary_learning/saes/estMedSae170425/trainer_0/ae_0505.pt\").to(\"cuda\") # to is rquired to load to GPU"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "ba905ef2",
    "metadata": {},
    "outputs": [],
@@ -54,23 +78,12 @@
     "    device_map=device,\n",
     ")\n",
     "\n",
-    "activation_dim = model.transformer.h[0].ln_1.normalized_shape[0] # output dimension of the MLP = 768\n",
-    "submodule = model.transformer.h[11].mlp\n",
-    "\n",
-    "buffer = ActivationBuffer( # buffer will yield batches of tensors of dimension = submodule's output dimension\n",
-    "    data=data,\n",
-    "    model=model,\n",
-    "    submodule=submodule,\n",
-    "    d_submodule=activation_dim, # output dimension of the model component\n",
-    "    n_ctxs=3e4,  # length of each context. you can set this higher or lower dependong on your available memory\n",
-    "    device=device,\n",
-    "    out_batch_size = 2048 # reduce batch size to limit memory usage.\n",
-    ") "
+    "activation_dim = model.transformer.h[0].ln_1.normalized_shape[0] # output dimension of the MLP = 768\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "61bfafad",
    "metadata": {},
    "outputs": [
@@ -83,7 +96,72 @@
     }
    ],
    "source": [
-    "out = evaluate(dictionary = ae, \n",
+    "submodule = model.transformer.h[11].mlp \n",
+    "\n",
+    "data = read_csv(\"/gpfs/space/projects/stacc_health/data-synthetic/100k_synthetic_texts.csv\", 100_000)\n",
+    "buffer = ActivationBuffer( # buffer will yield batches of tensors of dimension = submodule's output dimension\n",
+    "    data=data,\n",
+    "    model=model,\n",
+    "    submodule=submodule,\n",
+    "    d_submodule=activation_dim, # output dimension of the model component\n",
+    "    n_ctxs=3e4,  # length of each context. you can set this higher or lower dependong on your available memory\n",
+    "    device=device,\n",
+    "    out_batch_size = 2048 # reduce batch size to limit memory usage.\n",
+    ")\n",
+    "\n",
+    "out_ae_X16L11 = evaluate(dictionary = ae_X16L11, \n",
+    "               activations = buffer,\n",
+    "               device = device,\n",
+    "              )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "7e3a035a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "submodule = model.transformer.h[5].mlp \n",
+    "\n",
+    "data = read_csv(\"/gpfs/space/projects/stacc_health/data-synthetic/100k_synthetic_texts.csv\", 100_000)\n",
+    "buffer = ActivationBuffer( # buffer will yield batches of tensors of dimension = submodule's output dimension\n",
+    "    data=data,\n",
+    "    model=model,\n",
+    "    submodule=submodule,\n",
+    "    d_submodule=activation_dim, # output dimension of the model component\n",
+    "    n_ctxs=3e4,  # length of each context. you can set this higher or lower dependong on your available memory\n",
+    "    device=device,\n",
+    "    out_batch_size = 2048 # reduce batch size to limit memory usage.\n",
+    ")\n",
+    "\n",
+    "out_ae_X16L5 = evaluate(dictionary = ae_X16L5, \n",
+    "               activations = buffer,\n",
+    "               device = device,\n",
+    "              )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "4e58bc1f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "submodule = model.transformer.h[11].mlp \n",
+    "\n",
+    "data = read_csv(\"/gpfs/space/projects/stacc_health/data-synthetic/100k_synthetic_texts.csv\", 100_000)\n",
+    "buffer = ActivationBuffer( # buffer will yield batches of tensors of dimension = submodule's output dimension\n",
+    "    data=data,\n",
+    "    model=model,\n",
+    "    submodule=submodule,\n",
+    "    d_submodule=activation_dim, # output dimension of the model component\n",
+    "    n_ctxs=3e4,  # length of each context. you can set this higher or lower dependong on your available memory\n",
+    "    device=device,\n",
+    "    out_batch_size = 2048 # reduce batch size to limit memory usage.\n",
+    ")\n",
+    "\n",
+    "out_ae_X64L11 = evaluate(dictionary = ae_X64_11, \n",
     "               activations = buffer,\n",
     "               device = device,\n",
     "              )"
@@ -109,34 +187,98 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "id": "b2572080",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'l2_loss': 5.859640121459961,\n",
-       " 'l1_loss': 20.421188354492188,\n",
-       " 'l0': 45.0107421875,\n",
-       " 'frac_variance_explained': 0.7675023078918457,\n",
-       " 'cossim': 0.8705556392669678,\n",
-       " 'l2_ratio': 0.7453358173370361,\n",
-       " 'relative_reconstruction_bias': 0.8966822624206543,\n",
+       "{'l2_loss': 5.667590141296387,\n",
+       " 'l1_loss': 19.95207977294922,\n",
+       " 'l0': 43.54638671875,\n",
+       " 'frac_variance_explained': 0.7986932992935181,\n",
+       " 'cossim': 0.8762193322181702,\n",
+       " 'l2_ratio': 0.7574641704559326,\n",
+       " 'relative_reconstruction_bias': 0.9113766551017761,\n",
        " 'loss_original': 4.567016124725342,\n",
        " 'loss_reconstructed': 4.580355644226074,\n",
        " 'loss_zero': 4.4883832931518555,\n",
        " 'frac_recovered': 1.1696431636810303,\n",
-       " 'frac_alive': 0.6669108271598816}"
+       " 'frac_alive': 0.6610514521598816}"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "out"
+    "out_ae_X16L11"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "ed4639e6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'l2_loss': 2.1785030364990234,\n",
+       " 'l1_loss': 8.521507263183594,\n",
+       " 'l0': 29.810546875,\n",
+       " 'frac_variance_explained': 0.7897974252700806,\n",
+       " 'cossim': 0.8987048864364624,\n",
+       " 'l2_ratio': 0.7879399657249451,\n",
+       " 'relative_reconstruction_bias': 0.8931994438171387,\n",
+       " 'loss_original': 4.567016124725342,\n",
+       " 'loss_reconstructed': 4.534842491149902,\n",
+       " 'loss_zero': 4.641909122467041,\n",
+       " 'frac_recovered': 1.42959463596344,\n",
+       " 'frac_alive': 0.5171712636947632}"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "out_ae_X16L5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "b77a1906",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'l2_loss': 5.583471298217773,\n",
+       " 'l1_loss': 19.707857131958008,\n",
+       " 'l0': 41.681640625,\n",
+       " 'frac_variance_explained': 0.8173326849937439,\n",
+       " 'cossim': 0.8841896057128906,\n",
+       " 'l2_ratio': 0.7713171243667603,\n",
+       " 'relative_reconstruction_bias': 0.9197777509689331,\n",
+       " 'loss_original': 4.567016124725342,\n",
+       " 'loss_reconstructed': 4.560064315795898,\n",
+       " 'loss_zero': 4.4883832931518555,\n",
+       " 'frac_recovered': 0.9115915298461914,\n",
+       " 'frac_alive': 0.2857869565486908}"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "out_ae_X64L11"
    ]
   }
  ],
