--- a/run_SAE.ipynb
+++ b/run_SAE.ipynb
@@ -76,7 +76,7 @@
    ],
    "source": [
     "# load autoencoder\n",
-    "ae = AutoEncoder.from_pretrained(\"/gpfs/helios/home/jpauklin/dictionary_learning/saes/estMedSaeX16/trainer_0/ae_1105.pt\").to(\"cuda\") # to is rquired to load to GPU\n",
+    "ae = AutoEncoder.from_pretrained(\"/gpfs/helios/home/jpauklin/dictionary_learning/saes/estMedSae170425/trainer_0/ae_0505.pt\").to(\"cuda\") # to is rquired to load to GPU\n",
     "\n",
     "device = \"cuda:0\" #GPU\n",
     "# Load Model\n",
@@ -97,7 +97,7 @@
    "outputs": [],
    "source": [
     "data = read_csv(\"/gpfs/space/projects/stacc_health/data-synthetic/100k_synthetic_texts.csv\", 100_000) # (csv_path, nr_of_text_batches_to_read)\n",
-    "text = list(data)[20_000:] # list from iterator"
+    "text = list(data)[50_000:] # list from iterator"
    ]
   },
   {
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "e6d94051",
    "metadata": {},
    "outputs": [
@@ -158,7 +158,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "80000\n",
+      "50000\n",
       "Input ids size 128\n"
      ]
     }
@@ -170,20 +170,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "521ab880",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "h5 file already exists. New data will be appended to previous data.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "h5file_path = \"features/featuresX16_L11_10000.h5\"\n",
+    "h5file_path = \"features/featuresX64_L11_50000.h5\"\n",
     "batch_length = len(tokens['input_ids'][0])# the number of tokens in longest input batch\n",
     "writer = SparseFeatureWriter(h5file_path, batch_length)"
    ]
@@ -200,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "1510055b",
    "metadata": {},
    "outputs": [
@@ -208,9 +200,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Extracting features:   0%|          | 0/80000 [00:00<?, ?it/s]You're using a GPT2TokenizerFast tokenizer. Please note that with a fast tokenizer, using the `__call__` method is faster than using a method to encode the text followed by a call to the `pad` method to get a padded encoding.\n",
+      "Extracting features:   0%|          | 0/50000 [00:00<?, ?it/s]You're using a GPT2TokenizerFast tokenizer. Please note that with a fast tokenizer, using the `__call__` method is faster than using a method to encode the text followed by a call to the `pad` method to get a padded encoding.\n",
       "`loss_type=None` was set in the config but it is unrecognised.Using the default loss: `ForCausalLMLoss`.\n",
-      "Extracting features: 100%|██████████| 80000/80000 [6:55:21<00:00,  3.21it/s]   \n"
+      "Extracting features:  12%|█▏        | 6170/50000 [29:46<3:22:03,  3.62it/s] "
      ]
     }
    ],
