--- a/run_SAE.ipynb
+++ b/run_SAE.ipynb
@@ -76,7 +76,7 @@
    ],
    "source": [
     "# load autoencoder\n",
-    "ae = AutoEncoder.from_pretrained(\"/gpfs/helios/home/jpauklin/dictionary_learning/saes/estMedSae170425/trainer_0/ae_0505.pt\").to(\"cuda\") # to is rquired to load to GPU\n",
+    "ae = AutoEncoder.from_pretrained(\"/gpfs/helios/home/jpauklin/dictionary_learning/saes/estMedSaeX16layer5/trainer_0/ae_1105.pt\").to(\"cuda\") # to is rquired to load to GPU\n",
     "\n",
     "device = \"cuda:0\" #GPU\n",
     "# Load Model\n",
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "e6d94051",
    "metadata": {},
    "outputs": [
@@ -170,12 +170,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "521ab880",
    "metadata": {},
    "outputs": [],
    "source": [
-    "h5file_path = \"features/featuresX64_L11_50000.h5\"\n",
+    "h5file_path = \"features/featuresX16_L5_50000.h5\"\n",
     "batch_length = len(tokens['input_ids'][0])# the number of tokens in longest input batch\n",
     "writer = SparseFeatureWriter(h5file_path, batch_length)"
    ]
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "1510055b",
    "metadata": {},
    "outputs": [
@@ -202,7 +202,7 @@
      "text": [
       "Extracting features:   0%|          | 0/50000 [00:00<?, ?it/s]You're using a GPT2TokenizerFast tokenizer. Please note that with a fast tokenizer, using the `__call__` method is faster than using a method to encode the text followed by a call to the `pad` method to get a padded encoding.\n",
       "`loss_type=None` was set in the config but it is unrecognised.Using the default loss: `ForCausalLMLoss`.\n",
-      "Extracting features:  12%|█▏        | 6170/50000 [29:46<3:22:03,  3.62it/s] "
+      "Extracting features: 100%|██████████| 50000/50000 [3:22:34<00:00,  4.11it/s]  \n"
      ]
     }
    ],
@@ -214,7 +214,7 @@
     "    with model.trace(input_ids, attention_mask) as tracer:\n",
     "    \n",
     "        # Selecting a specific layer to capture\n",
-    "        mlp_output = model.transformer.h[11].mlp.c_proj.output.save()\n",
+    "        mlp_output = model.transformer.h[5].mlp.c_proj.output.save()\n",
     "        # The model is actually run upon exiting the tracing context. (https://nnsight.net/notebooks/tutorials/walkthrough/)\n",
     "    \n",
     "    activations = mlp_output.value\n",
